cabal-version:      3.0
name:               cartouche
version:            0.1.0.0
synopsis:           Document generator.
description:
  Opinionated document generator with S-expression-like markup.

bug-reports:        https://github.com/lancelet/cartouche/issues
license:            BSD-3-Clause
author:             Jonathan Merritt
maintainer:         j.s.merritt@gmail.com
copyright:          Copyright (C) Jonathan Merritt 2021
category:           Documentation
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/lancelet/cartouche.git

common base
  default-language: Haskell2010
  build-depends:    base ^>=4.14.0.0

common ghc-options
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

executable cartouche
  import:         base, ghc-options
  main-is:        Main.hs
  hs-source-dirs: app

test-suite cartouche-test
  import:         base
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs
  build-depends:
    , doctest
    , megaparsec

library
  import:          base, ghc-options
  hs-source-dirs:  src
  exposed-modules: Cartouche.Doc
  build-depends:
    , containers
    , megaparsec
    , text
